--- a/lessons.html
+++ b/lessons.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="description"
-        content="We are SARO. We offer free Polish lessons! This project was created as a result of a desire to help people, teaching the Polish language and share our culture and curiosities">
-    <meta name="keywords"
-        content="Polish lessons, Polish lessons online, online, lessons online, Polish online, free Polish lessons, polish lessons, Polska, polskie lekcje, lekcje języka polskiego, przepisy, recipes, recipe, polish foods recipe, recipes of Polish foods, żurek, naleśniki, gołąbki, żurek recipe, naleśniki recipe, gołąbki recipe, Polish cabbage rolls recipe, Polish free lessons, how to learn Polish, where to learn Polish, przypadki, polish declensions, how to make Polish words, how to make Polish sentences, SARO, SARO Polish lessons for free, SARO Polish, saro Polish lessons, Polish, Poland, Polska, polski, język polski, Polish hangman, saro, course, online, courses, english, japanese, Polish, Polish lessons, Polish curiosities, Polish tradition, Saro Polish langauge lessons online, Polish grammar, Polish media, Polish movies, Polish music, Polish foods, Polish food, pierogi, naleśniki, the best website for studying Polish, Polish lessons, Polish dictionary, Saro, Sa, Ro, Saki, Robert, Polish pronunciation, how to speak Polish, Warszawa, Warsaw, Wrocław, Wroclaw, Gdańsk, Polish cases, przypadki, Polish ortography, Polish culture, Polish traditions">
-    <meta name="author" content="Robert Michalski">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:site_name" content="Saro.Website with free Polish lessons" />
-    <meta property="og:url" content="www.saro.website" />
-    <meta property="og:type" content="website" />
-    <meta name="title" property="og:title" content="Saro.Website with free Polish lessons" />
-    <meta name="image" property="og:image" content="https://saro.website/assets/img/bg/header-banner.jpg" />
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1024">
-    <meta property="og:image:height" content="1024">
-    <script defer type="text/javascript"
-        src="//www.3dcart.com/lp/cookie-law-generator/cookie.js?skin=cookielaw3&amp;animation=shake&amp;msg=We%20use%20cookies%20to%20understand%20how%20you%20use%20our%20site%20and%20to%20improve%20your%20experience.%20This%20includes%20personalizing%20content%20and%20advertising.%20To%20learn%20more%2C%20%5Burl%3Dhttps%3A%2Fsaro.website%2Flearnmore%5Dclick%20here%5B%2Furl%5D.%20By%20continuing%20to%20use%20our%20site%2C%20you%20accept%20our%20use%20of%20cookies%2C%20revised%5Burl%3Dhttps%3A%2F%2Fsaro.website%2Flearnmore%5D%20Privacy%20Policy%20and%20Terms%20of%20Use%5B%2Furl%5D.%20Our%20website%20is%20free%20of%20charged%20so%20why%20we%20need%20to%20add%20some%20ads%20to%20keep%20our%20domain%20and%20hosting.&amp;learnmore=Learn%20more%20about%20cookies&amp;morelink=https%3A%2F%2Fpolicies.google.com%2Ftechnologies%2Fcookies%3Fhl%3Den-US"></script>
-    <script data-ad-client="ca-pub-5704095251892500" defer
-        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <link rel="stylesheet" href="./assets/style/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="description"
+    content="We are SARO. We offer free Polish lessons! This project was created as a result of a desire to help people, teaching the Polish language and share our culture and curiosities">
+  <meta name="keywords"
+    content="Polish lessons, Polish lessons online, online, lessons online, Polish online, free Polish lessons, polish lessons, Polska, polskie lekcje, lekcje języka polskiego, przepisy, recipes, recipe, polish foods recipe, recipes of Polish foods, żurek, naleśniki, gołąbki, żurek recipe, naleśniki recipe, gołąbki recipe, Polish cabbage rolls recipe, Polish free lessons, how to learn Polish, where to learn Polish, przypadki, polish declensions, how to make Polish words, how to make Polish sentences, SARO, SARO Polish lessons for free, SARO Polish, saro Polish lessons, Polish, Poland, Polska, polski, język polski, Polish hangman, saro, course, online, courses, english, japanese, Polish, Polish lessons, Polish curiosities, Polish tradition, Saro Polish langauge lessons online, Polish grammar, Polish media, Polish movies, Polish music, Polish foods, Polish food, pierogi, naleśniki, the best website for studying Polish, Polish lessons, Polish dictionary, Saro, Sa, Ro, Saki, Robert, Polish pronunciation, how to speak Polish, Warszawa, Warsaw, Wrocław, Wroclaw, Gdańsk, Polish cases, przypadki, Polish ortography, Polish culture, Polish traditions">
+  <meta name="author" content="Robert Michalski">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:site_name" content="Saro.Website with free Polish lessons" />
+  <meta property="og:url" content="www.saro.website" />
+  <meta property="og:type" content="website" />
+  <meta name="title" property="og:title" content="Saro.Website with free Polish lessons" />
+  <meta name="image" property="og:image" content="https://saro.website/assets/img/bg/header-banner.jpg" />
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+  <script defer type="text/javascript"
+    src="//www.3dcart.com/lp/cookie-law-generator/cookie.js?skin=cookielaw3&amp;animation=shake&amp;msg=We%20use%20cookies%20to%20understand%20how%20you%20use%20our%20site%20and%20to%20improve%20your%20experience.%20This%20includes%20personalizing%20content%20and%20advertising.%20To%20learn%20more%2C%20%5Burl%3Dhttps%3A%2Fsaro.website%2Flearnmore%5Dclick%20here%5B%2Furl%5D.%20By%20continuing%20to%20use%20our%20site%2C%20you%20accept%20our%20use%20of%20cookies%2C%20revised%5Burl%3Dhttps%3A%2F%2Fsaro.website%2Flearnmore%5D%20Privacy%20Policy%20and%20Terms%20of%20Use%5B%2Furl%5D.%20Our%20website%20is%20free%20of%20charged%20so%20why%20we%20need%20to%20add%20some%20ads%20to%20keep%20our%20domain%20and%20hosting.&amp;learnmore=Learn%20more%20about%20cookies&amp;morelink=https%3A%2F%2Fpolicies.google.com%2Ftechnologies%2Fcookies%3Fhl%3Den-US">
+  </script>
+  <script data-ad-client="ca-pub-5704095251892500" defer
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <link rel="stylesheet" href="./assets/style/css/style.css">
   <title>Welcome to SARO - Lessons</title>
 </head>
+
 <body>
   <header>
     <a href="index.html" class="header-brand">SARO</a>
@@ -31,7 +34,7 @@
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
-    </button>
+      </button>
       <ul class="nav__desktop">
         <li><a class="nav" href="./index.html">Home</a></li>
         <li><a class="nav" href="./lessons.html">Lessons</a></li>
@@ -659,140 +662,183 @@
               <br>
               Wycieczka - trip
               <br>
-              Wycieczka po Warszawie - a trip around Warsaw</p>
+              Wycieczka po Warszawie - a trip around Warsaw <br></p>
+              <div class="sign">
+                <p class="sign--person">written by</p>
+                <a href="about.html" target="_blank">@</a>
+              </div>
           </div>
           <button class="lesson lesson--adj">Adjectives</button>
           <div class="panel">
             <h2>Adjectives</h2><br>
-            <p>As you could see in the previous lesson about declension, in Polish language nouns change depending on so called cases (pl. przypadki). Adjectives don’t differ in this aspect. There are 7 cases, and the questions we ask to find a right change (odmiana) are unchangeable. <br>
-              Adjective’s function is to describe a noun so it answers questions: what (kind of)?/ which? ( pl. jaki, jaka, jakie?), which (one)? (który, która, które?), whose? (czyj, czyja, czyje?). <br> <br>
+            <p>As you could see in the previous lesson about declension, in Polish language nouns change depending on so
+              called cases (pl. przypadki). Adjectives don’t differ in this aspect. There are 7 cases, and the questions
+              we ask to find a right change (odmiana) are unchangeable. <br>
+              Adjective’s function is to describe a noun so it answers questions: what (kind of)?/ which? ( pl. jaki,
+              jaka, jakie?), which (one)? (który, która, które?), whose? (czyj, czyja, czyje?). <br> <br>
               Here are some examples: <br>
-             <img src="./assets/img/lessons/adjectives/table1.jpg" alt="Polish adjectives" class="myImg image-center__center">
+              <img src="./assets/img/lessons/adjectives/table1.jpg" alt="Polish adjectives"
+                class="myImg image-center__center">
               <br> <br>
-              Adjective is a changeable part of speech. It changes according to the same rules as a noun - through cases, numbers and genders. To know what ending we should add in the end of an adjective to modify it correctly, we need to know: what is the case, grammatical gender of a noun we are describing and if the noun is in the plural or in the singular. <br><br>
-              Almost all the Polish adjectives change  according to one regular scheme, which is as follows: <br><br>
-              <img src="./assets/img/lessons/adjectives/table2.jpg" alt="Adjectives according to gender" class="myImg image-center__center">
+              Adjective is a changeable part of speech. It changes according to the same rules as a noun - through
+              cases, numbers and genders. To know what ending we should add in the end of an adjective to modify it
+              correctly, we need to know: what is the case, grammatical gender of a noun we are describing and if the
+              noun is in the plural or in the singular. <br><br>
+              Almost all the Polish adjectives change according to one regular scheme, which is as follows: <br><br>
+              <img src="./assets/img/lessons/adjectives/table2v2.png" alt="Adjectives according to gender"
+                class="myImg image-center__center">
               <br>
+            </p>
+              <p>
               <table>
                 <tr>
-                  <td style="color:pink">pink</td>
+                  <td style="background-color: #FFD9FF">pink</td>
                   <td>the basic form of adjective (feminine Nominative)</td>
                 </tr>
                 <tr>
-                  <td style="color:greenyellow">green</td>
+                  <td style="background-color:#98FF65">green</td>
                   <td>(endings with e): <br>
-                    - the second form (with i) in the case of adjectives which ends on: ka (e.g. wielka), ga (e.g. długa), ia (e.g. głupia) in feminine Nominative; <br>
+                    - the second form (with i) in the case of adjectives which ends on: ka (e.g. wielka), ga (e.g.
+                    długa), ia (e.g. głupia) in feminine Nominative; <br>
                     - in other cases: the form without i; <br></td>
                 </tr>
                 <tr>
-                  <td style="color:yellow">yellow</td>
+                  <td style="background-color:#FFFF65">yellow</td>
                   <td>(endings with i / y): <br>
-                    - the second form  (with i) in the case of adjectives which ends on: ka (e.g. wielka), ga (e.g. długa), la (e.g. ośla), ia (e.g. głupia) in feminine Nominative; <br>
+                    - the second form (with i) in the case of adjectives which ends on: ka (e.g. wielka), ga (e.g.
+                    długa), la (e.g. ośla), ia (e.g. głupia) in feminine Nominative; <br>
                     - in other cases: the form without i;</td>
                 </tr>
                 <tr>
-                  <td style="color:lightblue">blue</td>
-                  <td>- the second form (with i) in the case of adjectives which ends on ia (e.g. głupia) in feminine Nominative; <br>
+                  <td style="background-color:#ADC5DF">blue</td>
+                  <td>- the second form (with i) in the case of adjectives which ends on ia (e.g. głupia) in feminine
+                    Nominative; <br>
                     - in other cases: the form without i ;</td>
                 </tr>
                 <tr>
-                  <td style="color: red;">red</td>
+                  <td style="background-color: #FE9A68;">red</td>
                   <td>it is needed to soften the sound which comes directly before by adding i or y; </td>
                 </tr>
               </table>
               <br>
-              NOTICE : instead of endings -szy and sometimes -ży ( not -rzy), phonetically softened -si, -zi can appeared. For example: <br> <br>
-ten wyższy – ci wyżsi <br>
-ten głuchy – ci głusi <br>
-ten duży – ci duzi <br>
-<br>
-*but: <br>
-ten boży – ci boży <br>
-ten stary – ci starzy <br>
-ten kurzy – ci kurzy <br>
-<br>
-Here you analyze some softened forms of endings on the example of masculine Nominative in the singular: <br>
-<br>
-<table>
-  <tr><td colspan="2"><i>y</i> becomes  <i>i</i></td>
-  </tr>
-  <tr>
-    <td>by   bi</td>
-    <td>gruby   grubi</td>
-  </tr>
-  <tr><td>my   mi</td>
-  <td></td>
-</tr>
-  <tr>
-    <td>ny   ni</td>
-  <td>kochany   kochani</td></tr>
-  <tr><td>wy   wi</td>
-  <td>szczęśliwy   szczęśliwi</td></tr>
-  <tr><td colspan="2">change of the consonant, <i>y</i> stays</td></tr>
-  <tr><td>ry   rzy</td>
-  <td>ponury   ponurzy</td></tr>
-  <tr><td colspan="2">change of the consonant, <i>y</i> becomes <i>i</i></td></tr>
-  <tr> <td>ł   li</td>
-  <td>wesół   weseli</td></tr>
-  <tr><td>szy   si</td>
-  <td></td></tr>
-  <tr>
-    <td>chy   si</td>
-    <td>cichy   cisi</td>
-  </tr>
-  <tr>
-    <td>ży (sometimes)   zi</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>ty   ci</td>
-    <td>otwarty   otwarci</td>
-  </tr>
-  <tr>
-    <td>sty   ści</td>
-    <td>wyrazisty   wyraziści</td>
-  </tr>
-  <tr><td colspan="2">change of the consonant, <i>i</i> becomes <i>y</i>
-  </td></tr>
-  <tr>
-    <td>ki   cy</td>
-    <td>głęboki   głębocy</td>
-  </tr>
-  <tr>
-    <td>gi   dzy</td>
-    <td>długi   dłudzy</td>
-  </tr>
-  <tr><td colspan="2">with no changes, with i</td></tr>
-  <tr>
-    <td>pi   pi</td>
-    <td>głupi   głupi</td>
-  </tr>
-  <tr>
-    <td>si   si</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>wi   wi</td>
-    <td></td>
-  </tr>
-  <tr> <td colspan="2">with no changes, with <i>y</i>
-  </td></tr>
-  <tr>
-    <td>rzy   rzy</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>ży (sometimes)   ży</td>
-    <td>chyży   chyży</td>
-  </tr>
-</table>
-<br>
-NOTICE : the are some phrases in which an adjective appears <u>after</u> a noun.
-duże państwo, potężne państwo          państwo polskie
-czarny kot, pogodny kot          kot domowy
-wieloletnia wojna, druga wojna          wojna domowa
-
-              </p>
+              NOTICE : instead of endings -szy and sometimes -ży ( not -rzy), phonetically softened -si, -zi can
+              appeared. For example: <br> <br>
+              ten wyższy – ci wyżsi <br>
+              ten głuchy – ci głusi <br>
+              ten duży – ci duzi <br>
+              <br>
+              *but: <br>
+              ten boży – ci boży <br>
+              ten stary – ci starzy <br>
+              ten kurzy – ci kurzy <br>
+              <br>
+              Here you analyze some softened forms of endings on the example of masculine Nominative in the singular:
+              <br>
+              <br>
+              <table style="width:80%">
+                <tr>
+                  <td colspan="2" style="background-color: #ADC5DF;"><i>y</i> becomes <i>i</i></td>
+                </tr>
+                <tr>
+                  <td>by bi</td>
+                  <td>gruby grubi</td>
+                </tr>
+                <tr>
+                  <td>my mi</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>ny ni</td>
+                  <td>kochany kochani</td>
+                </tr>
+                <tr>
+                  <td>wy wi</td>
+                  <td>szczęśliwy szczęśliwi</td>
+                </tr>
+                <tr>
+                  <td colspan="2" style="background-color: #ADC5DF;">change of the consonant, <i>y</i> stays</td>
+                </tr>
+                <tr>
+                  <td>ry rzy</td>
+                  <td>ponury ponurzy</td>
+                </tr>
+                <tr>
+                  <td colspan="2" style="background-color: #ADC5DF;">change of the consonant, <i>y</i> becomes <i>i</i></td>
+                </tr>
+                <tr>
+                  <td>ł li</td>
+                  <td>wesół weseli</td>
+                </tr>
+                <tr>
+                  <td>szy si</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>chy si</td>
+                  <td>cichy cisi</td>
+                </tr>
+                <tr>
+                  <td>ży (sometimes) zi</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>ty ci</td>
+                  <td>otwarty otwarci</td>
+                </tr>
+                <tr>
+                  <td>sty ści</td>
+                  <td>wyrazisty wyraziści</td>
+                </tr>
+                <tr>
+                  <td colspan="2" style="background-color: #ADC5DF;">change of the consonant, <i>i</i> becomes <i>y</i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>ki cy</td>
+                  <td>głęboki głębocy</td>
+                </tr>
+                <tr>
+                  <td>gi dzy</td>
+                  <td>długi dłudzy</td>
+                </tr>
+                <tr>
+                  <td colspan="2">with no changes, with i</td>
+                </tr>
+                <tr>
+                  <td>pi pi</td>
+                  <td>głupi głupi</td>
+                </tr>
+                <tr>
+                  <td>si si</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>wi wi</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td colspan="2" style="background-color: #ADC5DF;"> with no changes, with <i>y</i>
+                  </td>
+                </tr>
+                <tr>
+                  <td>rzy rzy</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>ży (sometimes) ży</td>
+                  <td>chyży chyży</td>
+                </tr>
+              </table>
+              <br>
+              NOTICE : the are some phrases in which an adjective appears <u>after</u> a noun. <br>
+              duże państwo, potężne państwo państwo polskie <br>
+              czarny kot, pogodny kot kot domowy <br>
+              wieloletnia wojna, druga wojna wojna domowa <br> <br>
+            </p>
+            <div class="sign">
+              <p class="sign--person">written by</p>
+              <a href="about.html" target="_blank">@Magda</a>
+            </div>
           </div>
         </div>
         <!--
