--- a/lessons.html
+++ b/lessons.html
@@ -685,7 +685,7 @@
               correctly, we need to know: what is the case, grammatical gender of a noun we are describing and if the
               noun is in the plural or in the singular. <br><br>
               Almost all the Polish adjectives change according to one regular scheme, which is as follows: <br><br>
-              <img src="./assets/img/lessons/adjectives/table2v2.png" alt="Adjectives according to gender"
+              <img src="./assets/img/lessons/adjectives/table2v2.jpg" alt="Adjectives according to gender"
                 class="myImg image-center__center">
               <br>
             </p>
