--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                     *<a href="./stuff/dialogue.html">Dialogue</a> Grocery!<br>
                                     *<a href="./stuff/traditions.html">Traditions</a> About "ALL SAINT’S DAY"<br>
                                     <br>
-                                   <b>New lesson is incomming!</b> See you soon 🥰 <br>
+                                   <b>New lesson is comming soon!</b> See you soon 🥰 <br>
                                 </p>
                             </div>
                         </div>
