--- a/lessons.html
+++ b/lessons.html
@@ -663,10 +663,10 @@
               Wycieczka - trip
               <br>
               Wycieczka po Warszawie - a trip around Warsaw <br></p>
-              <div class="sign">
-                <p class="sign--person">written by</p>
-                <a href="about.html" target="_blank">@</a>
-              </div>
+            <div class="sign">
+              <p class="sign--person">written by</p>
+              <a href="about.html" target="_blank">@</a>
+            </div>
           </div>
           <button class="lesson lesson--adj">Adjectives</button>
           <div class="panel">
@@ -689,8 +689,8 @@
                 class="myImg image-center__center">
               <br>
             </p>
-              <p>
-              <table>
+            <p>
+              <table class="table">
                 <tr>
                   <td style="background-color: #FFD9FF">pink</td>
                   <td>the basic form of adjective (feminine Nominative)</td>
@@ -735,7 +735,7 @@
               Here you analyze some softened forms of endings on the example of masculine Nominative in the singular:
               <br>
               <br>
-              <table style="width:80%">
+              <table class="table" style="width:80%">
                 <tr>
                   <td colspan="2" style="background-color: #ADC5DF;"><i>y</i> becomes <i>i</i></td>
                 </tr>
@@ -763,7 +763,8 @@
                   <td>ponury ponurzy</td>
                 </tr>
                 <tr>
-                  <td colspan="2" style="background-color: #ADC5DF;">change of the consonant, <i>y</i> becomes <i>i</i></td>
+                  <td colspan="2" style="background-color: #ADC5DF;">change of the consonant, <i>y</i> becomes <i>i</i>
+                  </td>
                 </tr>
                 <tr>
                   <td>ł li</td>
@@ -838,6 +839,172 @@
             <div class="sign">
               <p class="sign--person">written by</p>
               <a href="about.html" target="_blank">@Magda</a>
+            </div>
+          </div>
+          <button class="lesson lesson--nounGrammaticalGender">Noun grammatical gender
+          </button>
+          <div class="panel">
+            <h2>Noun grammatical gender</h2>
+            <p>
+              At the very early stage of learning Polish, you might discover how different a man and a woman will
+              introduce themselves. Let me provide you two examples, see below. <br> <br>
+              <strong>Damian:</strong><br>
+              Cześć! Jestem Damian, mam 28 lat. Urodził<span class="redLetter">em</span> się w Polsce, jestem
+              Polaki<span class="redLetter">em</span>. Pracuję jako nauczyci<span class="redLetter">el</span> w szkole.
+              <br>
+              <br>
+              <strong>Anna:</strong> <br>
+              Cześć! Jestem Anna, mam 27 lat. Urodził<span class="redLetter">am</span> się w Polsce, jestem Polk<span
+                class="redLetter">ą</span>. Pracuję jako nauczyciel<span class="redLetter">ka</span> w szkole. <br> <br>
+              <br>
+              And here are the translations: <br><br>
+
+              <strong>Damian:</strong> <br>
+              Hello! I am Damian, I am 28 years old. I was born in Poland, I am Polish. I work as a teacher at school.
+              <br><br>
+              <strong>Anna:</strong> <br>
+              Hello! I am Anna, I am 27 years old. I was born in Poland, I am Polish. I work as a teacher at school.
+              <br>
+              <br>
+              Apart from declension, a vital role in sentence-forming is played by gender. In case of the examples
+              above, the differences come from the fact that each speaker is of different <strong>gender</strong>. As
+              you can see, in these short bits there are three places <span class="redLetter">(red)</span> formed in
+              accordance with the speaker’s gender.
+              <br>
+              <br>
+              I believe now you can see what an important grammar aspect is gender. Now let’s move on and discover more
+              regarding <strong>noun gender in Polish.</strong> <br>
+              In Polish language, every noun has got a gender. Three basic genders are: <br>
+              <li>
+                <ul>masculine (rodzaj męski)</ul>
+                <ul>feminine (rodzaj żeński)</ul>
+                <ul>neuter (rodzaj nijaki) </ul>
+              </li>
+              <br>
+              Since we started with people, let’s continue with this. It is easy to distinguish gender of nouns pointing
+              to people: <br>
+              Ten mężczyzna – this man -> masculine <br>
+              Ten chłopiec – this boy -> masculine <br>
+              Ta kobieta – this woman -> feminine <br>
+              Ta dziewczyna – this girl -> feminine <br>
+              To dziecko – this child -> neuter <br>
+              Quite easy, right? <br> <br>
+              Now, the challenge starts with learning nouns related to things and to animals. In case of those,
+              grammatical gender has got nothing to do with an actual gender – I mean how do you know what gender a
+              window or an apple is? Truth be told, these need to be learnt by heart. A tip – when studying nouns always
+              learn them together with a gender!
+              <br><br>
+              Here are some examples of masculine nouns:
+              <br>
+              <table>
+                <tr>
+                  <td>dom – house </td>
+                  <td>ten dom – this house</td>
+                </tr>
+                <tr>
+                  <td>samochód – car </td>
+                  <td>ten samochód - this car</td>
+                </tr>
+                <tr>
+                  <td>pies - dog</td>
+                  <td>ten pies - this dog</td>
+                </tr>
+                <tr>
+                  <td>kot - cat</td>
+                  <td>ten kot - this cat</td>
+                </tr>
+                <tr>
+                  <td>deszcz - rain</td>
+                  <td>ten deszcz- this rain</td>
+                </tr>
+                <tr>
+                  <td>las - forest</td>
+                  <td>ten las - this forest</td>
+                </tr>
+                <tr>
+                  <td>długopis - pen</td>
+                  <td>ten długopis - this pen</td>
+                </tr>
+              </table>
+              <br>
+              Here are some examples of feminine nouns: <br>
+              <table>
+                <tr>
+                  <td>kamera – video recorder </td>
+                  <td>ta kamera – this video recorder</td>
+                </tr>
+                <tr>
+                  <td>gitara – guitar </td>
+                  <td>ta gitara - this guitar</td>
+                </tr>
+                <tr>
+                  <td>szkoła - school</td>
+                  <td>ta szkoła - this school</td>
+                </tr>
+                <tr>
+                  <td>butelka - bottle</td>
+                  <td>ta butelka - this bottle</td>
+                </tr>
+                <tr>
+                  <td>herbata - tea</td>
+                  <td>ta herbata - this tea</td>
+                </tr>
+                <tr>
+                  <td>kawa - coffee</td>
+                  <td>ta kawa - this cofee</td>
+                </tr>
+                <tr>
+                  <td>krowa - cow</td>
+                  <td>ta krowa - this cow</td>
+                </tr>
+              </table>
+              In general <strong>nouns ending with -a are feminine</strong> but there are some exceptions, for example
+              <i>sprzedawca</i> – shop assistant (masculine) or <i>kierowca</i> – driver (masculine). <br>
+              <br>
+              There are also rare cases in which feminine noun does not end with -a, like <i>sól</i> – salt (feminine).
+              <br>
+              <br>
+              <br>
+              Here are some examples of neuter nouns: <br>
+              <table>
+                <tr>
+                  <td>okno - window</td>
+                  <td>to okno - this window</td>
+                </tr>
+                <tr>
+                  <td>oko - eye </td>
+                  <td>to oko - this eye</td>
+                </tr>
+                <tr>
+                  <td>bagno - swamp</td>
+                  <td>to bagno - this swamp</td>
+                </tr>
+                <tr>
+                  <td>piwo - beer</td>
+                  <td>to piwo - this beer</td>
+                </tr>
+                <tr>
+                  <td>auto - car</td>
+                  <td>to auto - this car</td>
+                </tr>
+                <tr>
+                  <td>ciasto - cake</td>
+                  <td>to ciasto - this cake</td>
+                </tr>
+                <tr>
+                  <td>kakao - cocoa</td>
+                  <td>to kakao - this cocoa</td>
+                </tr>
+              </table>
+              As you may have noticed, neuter nouns usually end with -o. <br>
+              <br>
+
+              That’s the basic basics really Don’t worry if you have trouble with this at first, you will get it in
+              time. It will be good if you make habit of remembering nouns along with their grammatical gender.
+            </p>
+            <div class="sign">
+              <p class="sign--person">written by</p>
+              <a href="about.html" target="_blank">@</a>
             </div>
           </div>
         </div>
