--- a/lessons.html
+++ b/lessons.html
@@ -844,21 +844,21 @@
             <p>
               At the very early stage of learning Polish, you might discover how different a man and a woman will
               introduce themselves. Let me provide you two examples, see below. <br> <br>
-              <strong>Damian:</strong><br>
-              Cześć! Jestem Damian, mam 28 lat. Urodził<span class="redLetter">em</span> się w Polsce, jestem
-              Polaki<span class="redLetter">em</span>. Pracuję jako nauczyci<span class="redLetter">el</span> w szkole.
+              <sb>Damian:</b><br>
+              <span lang="pl">Cześć! Jestem Damian, mam 28 lat. Urodził<span class="redLetter">em</span> się w Polsce, jestem
+              Polaki<span class="redLetter">em</span>. Pracuję jako nauczyci<span class="redLetter">el</span> w szkole.</span>
               <br>
               <br>
-              <strong>Anna:</strong> <br>
-              Cześć! Jestem Anna, mam 27 lat. Urodził<span class="redLetter">am</span> się w Polsce, jestem Polk<span
-                class="redLetter">ą</span>. Pracuję jako nauczyciel<span class="redLetter">ka</span> w szkole. <br> <br>
+              <b>Anna:</b> <br>
+              <span lang="pl">Cześć! Jestem Anna, mam 27 lat. Urodził<span class="redLetter">am</span> się w Polsce, jestem Polk<span
+                class="redLetter">ą</span>. Pracuję jako nauczyciel<span class="redLetter">ka</span> w szkole. </span><br> <br>
               <br>
               And here are the translations: <br><br>
 
-              <strong>Damian:</strong> <br>
+              <b>Damian:</b> <br>
               Hello! I am Damian, I am 28 years old. I was born in Poland, I am Polish. I work as a teacher at school.
               <br><br>
-              <strong>Anna:</strong> <br>
+              <b>Anna:</b> <br>
               Hello! I am Anna, I am 27 years old. I was born in Poland, I am Polish. I work as a teacher at school.
               <br>
               <br>
@@ -870,16 +870,18 @@
               I believe now you can see what an important grammar aspect is gender. Now let’s move on and discover more
               regarding <strong>noun gender in Polish.</strong> <br>
               In Polish language, every noun has got a gender. Three basic genders are: <br>
-              <li>
+              </p>
+  
+              <li class="noun-gender">
                 <ul>masculine (rodzaj męski)</ul>
                 <ul>feminine (rodzaj żeński)</ul>
                 <ul>neuter (rodzaj nijaki) </ul>
               </li>
-              <br>
+              <p>
               Since we started with people, let’s continue with this. It is easy to distinguish gender of nouns pointing
               to people: <br>
-              Ten mężczyzna – this man -> masculine <br>
-              Ten chłopiec – this boy -> masculine <br>
+              <span lang="pl">Ten mężczyzna </span>– this man -> masculine <br>
+              <span lang="pl">Ten chłopiec</span> – this boy -> masculine <br>
               Ta kobieta – this woman -> feminine <br>
               Ta dziewczyna – this girl -> feminine <br>
               To dziecko – this child -> neuter <br>
@@ -890,7 +892,7 @@
               learn them together with a gender!
               <br><br>
               Here are some examples of masculine nouns:
-              <br>
+              </p>
               <table>
                 <tr>
                   <td>dom – house </td>
@@ -921,8 +923,8 @@
                   <td>ten długopis - this pen</td>
                 </tr>
               </table>
-              <br>
-              Here are some examples of feminine nouns: <br>
+              <p>
+              Here are some examples of feminine nouns:</p>
               <table>
                 <tr>
                   <td>kamera – video recorder </td>
@@ -953,6 +955,7 @@
                   <td>ta krowa - this cow</td>
                 </tr>
               </table>
+              <p>
               In general <strong>nouns ending with -a are feminine</strong> but there are some exceptions, for example
               <i>sprzedawca</i> – shop assistant (masculine) or <i>kierowca</i> – driver (masculine). <br>
               <br>
@@ -960,7 +963,7 @@
               <br>
               <br>
               <br>
-              Here are some examples of neuter nouns: <br>
+              Here are some examples of neuter nouns: <p>
               <table>
                 <tr>
                   <td>okno - window</td>
@@ -991,6 +994,7 @@
                   <td>to kakao - this cocoa</td>
                 </tr>
               </table>
+              <p>
               As you may have noticed, neuter nouns usually end with -o. <br>
               <br>
 
