style, lesson updated

--- a/lessons.html
+++ b/lessons.html
@@ -686,7 +686,6 @@
             <img src="./assets/img/lessons/adjectives/table2v2.jpg" alt="Adjectives according to gender"
               class="myImg image-center__center">
             </p>
-            <p>
               <table class="table">
                 <tr>
                   <td style="background-color: #FFD9FF">pink</td>
@@ -717,20 +716,20 @@
                   <td>it is needed to soften the sound which comes directly before by adding i or y; </td>
                 </tr>
               </table>
-              <br>
-              NOTICE : instead of endings -szy and sometimes -ży ( not -rzy), phonetically softened -si, -zi can
+              <p><
+              NOTICE : instead of endings -szy and sometimes <span lang="pl"> -ży </span>( not -rzy), phonetically softened -si, -zi can
               appeared. For example: <br> <br>
-              ten wyższy – ci wyżsi <br>
-              ten głuchy – ci głusi <br>
-              ten duży – ci duzi <br>
+              <span lang="pl"></span>ten wyższy – ci wyżsi </span><br>
+              <span lang="pl"></span>ten głuchy – ci głusi </span><br>
+              <span lang="pl"></span>ten duży – ci duzi </span><br>
               <br>
               *but: <br>
-              ten boży – ci boży <br>
+              <span lang="pl">en boży – ci boży</span> <br>
               ten stary – ci starzy <br>
               ten kurzy – ci kurzy <br>
               <br>
               Here you analyze some softened forms of endings on the example of masculine Nominative in the singular:
-            <p>
+              </p>
             <table style="width:80%">
               <tr>
                 <td colspan="2" style="background-color: #ADC5DF;"><i>y</i> becomes <i>i</i></td>
@@ -826,7 +825,7 @@
                   <td>chyży chyży</td>
                 </tr>
               </table>
-              <br>
+              <p>
               NOTICE : the are some phrases in which an adjective appears <u>after</u> a noun. <br>
               duże państwo, potężne państwo państwo polskie <br>
               czarny kot, pogodny kot kot domowy <br>
@@ -837,7 +836,7 @@
               <a href="about.html" target="_blank">@Magda</a>
             </div>
           </div>
-          <button class="lesson lesson--nounGrammaticalGender">Noun grammatical gender
+          <button class="lesson lesson--nounGender">Noun grammatical gender
           </button>
           <div class="panel">
             <h2>Noun grammatical gender</h2>
@@ -871,12 +870,12 @@
               regarding <strong>noun gender in Polish.</strong> <br>
               In Polish language, every noun has got a gender. Three basic genders are: <br>
               </p>
-  
-              <li class="noun-gender">
-                <ul>masculine (rodzaj męski)</ul>
-                <ul>feminine (rodzaj żeński)</ul>
-                <ul>neuter (rodzaj nijaki) </ul>
-              </li>
+
+              <ul class="noun-gender">
+                <li>masculine (rodzaj męski)</li>
+                <li>feminine (rodzaj żeński)</li>
+                <li>neuter (rodzaj nijaki) </li>
+                </ul>
               <p>
               Since we started with people, let’s continue with this. It is easy to distinguish gender of nouns pointing
               to people: <br>
@@ -1003,7 +1002,7 @@
             </p>
             <div class="sign">
               <p class="sign--person">written by</p>
-              <a href="about.html" target="_blank">@</a>
+              <a href="about.html" target="_blank">@Martyna</a>
             </div>
           </div>
         </div>
